--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "readline-sync": "^1.4.10"
+    "express": "^4.18.2"
   }
 }
